Closed Bug 190946 Opened 23 years ago Closed 23 years ago

refreshing newsgroups does not download all groups

Categories

(SeaMonkey :: MailNews: Message Display, defect, P1)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.3beta

People

(Reporter: smaug, Assigned: darin.moz)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030127 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030127 Refreshing newsgroups (news.helsinki.fi) does not show (or download?) all groups. I just tested 1.2.1 too and it works ok. (news.helsinki.fi has about 15 000 groups, but only some of them shows up outside helsinki.fi-domain. So testing might be difficult.) Reproducible: Always Steps to Reproduce:
2003012408 -OK 2003012522 -Broken
2003012505 OK 2003012522 -Broken I'm not sure what has regressed this. Something in the netwerk? CC'ing darin
Yes, this is a regression of bug 189672. (Just tested with and without http://bugzilla.mozilla.org/attachment.cgi?id=112576&action=view)
Keywords: regression
Trying to download the groups -> "OnDataAvailable implementation consumed no data" (nsInputStreamPump.cpp:420) I'm sorry for all this spamming...
Summary: refreshing newsgroups does not show or download all groups → refreshing newsgroups does not download all groups
*** Bug 190994 has been marked as a duplicate of this bug. ***
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Blocking 1.3b?
Flags: blocking1.3b?
Trunk build 2003-01-28: In a new profile, I connect to news.mcom.com, go to the Subscribe dialog and it is only showing newsgroups that begin with an "a" which is a very limited number of groups. I would expect to see groups from "a" to "z". I don't have to select refresh to see this problem.
Keywords: nsbeta1
i've just hit this problem while trying to debug bug 190988. turns out that inside ReadNewsList we are hitting: if (m_readNewsListCount == READ_NEWS_LIST_COUNT_MAX) { } as a result we enter the NEWS_FINISHED state, and stay there until the timeout fires. however, necko is not told to suspend pushing data to news, and the next OnDataAvailable event from necko is ignored by news. this causes necko to abort the socket connection, since we would otherwise end up in an infinite loop until the timeout fires. i'm not sure exactly how to work around this problem, but it appears as if mailnews needs to be modified to properly put necko to sleep during the timeout period.
Attached patch v1 patchSplinter Review
adds code to suspend/resume necko at the right time. simple enough, but there is a little bit of trickiness in ensuring that the final call to ProcessProtocolState is made (after all of the news list has been downloaded).
-> me (upping severity.. this is got to be a beta blocker)
Assignee: sspitzer → darin
Severity: major → critical
Priority: -- → P1
Target Milestone: --- → mozilla1.3beta
Attachment #112917 - Flags: review?(sspitzer)
Comment on attachment 112917 [details] [diff] [review] v1 patch r/sr=sspitzer
Attachment #112917 - Flags: superreview+
Attachment #112917 - Flags: review?(sspitzer)
Attachment #112917 - Flags: review+
Comment on attachment 112917 [details] [diff] [review] v1 patch seeking drivers approval for 1.3b... this is an important bug to fix. low-risk patch. bug 176919 regression.
Attachment #112917 - Flags: approval1.3b?
Comment on attachment 112917 [details] [diff] [review] v1 patch a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #112917 - Flags: approval1.3b? → approval1.3b+
fixed-on-trunk
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Flags: blocking1.3b?
verified using the same scenario nbaca used in comment 7. verified with builds 20030228 on winxp, macosx, and linux
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: stephend → search
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: