fixes bug 190946 "refreshing newsgroups does not download all groups" r/sr=sspitzer a=asa