mailnews/news/src/nsNNTPProtocol.cpp
@@ -3319,6 +3319,9 @@ PRInt32 nsNNTPProtocol::ReadNewsList(nsIInputStream * inputStream, PRUint32 leng
     }
     
     m_nextState = NEWS_FINISHED;
+
+    // suspend necko request until timeout
+    m_request->Suspend();
   }
   
   PR_Free(lineToFree);
@@ -3338,11 +3341,25 @@ nsNNTPProtocol::Notify(nsITimer *timer)
 
 void nsNNTPProtocol::TimerCallback()
 {
+    PR_LOG(NNTP,PR_LOG_ALWAYS,("nsNNTPProtocol::TimerCallback\n"));
 	m_nextState = NNTP_READ_LIST;
+
+    // process whatever is already in the buffer at least once.
+    //
+    // NOTE: while downloading, it would almost be enough to just
+    // resume necko since it will call us again with data.  however,
+    // if we are at the end of the data stream then we must call
+    // ProcessProtocolState since necko will not call us again.
+    //
+    // NOTE: this function may Suspend necko.  Suspend is a reference
+    // counted (i.e., two suspends requires two resumes before the
+    // request will actually be resumed).
+    //
 	ProcessProtocolState(nsnull, mInputStream, 0,0); 
-#if 0
-	mInputStream = null;
-#endif
+
+    // resume necko request
+    m_request->Resume();
+
 	return;
 }
 
